added watson assistant api credentials

--- a/TravelChat.Server/TravelChat.Server.csproj
+++ b/TravelChat.Server/TravelChat.Server.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IBM.Watson.Assistant.v2" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>6.*-*</Version>
     </PackageReference>
