started implementing the chat service

--- a/TravelChat.Server/example.appsettings.json
+++ b/TravelChat.Server/example.appsettings.json
@@ -8,6 +8,7 @@
     "AllowedHosts": "*",
     "WatsonCredentials": {
         "Key": "",
-        "Url": ""
+        "Url": "",
+        "AssistantId": ""
     }
 }
