--- a/TravelChat.Server/TravelChat.Server.csproj
+++ b/TravelChat.Server/TravelChat.Server.csproj
@@ -7,6 +7,7 @@
     <SpaRoot>..\travelchat.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
